<resources>
    <string name="app_name">lesson09_K</string>
    <string name="zero">0</string>
    <string name="equal">=</string>
    <string name="plus">+</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="minus">-</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="multiply">*</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="divide">/</string>
    <string name="clear">c</string>
    <string name="error">ERROR</string>
    <string name="OK">OK</string>
    <string name="txtSavedDigits">Сохранённые значения:</string>
    <string name="txtCurrentDigit">Текущее значение:</string>
    <string name="Save">Сохранить</string>
    <string name="Calculator">Калькулятор</string>
    <string name="noDigits">Значений пока нет</string>
    <string name="noDigit">Нет значения</string>
    <string name="dontInputNumber">Вы не ввели число</string>
</resources>